# webgpu-bevy-rs

./: .gitignore  Cargo.toml
assets/shaders/: shader.wgsl
src/: camera.rs  main.rs  mesh.rs  primitives.rs  render_state.rs  texture.rs  vertex.rs
src/camera/: camera_bind_group.rs  camera_controller.rs  camera_uniform.rs  mod.rs  projection.rs
