[package]
name = "wgpu_dev"
version = "0.1.0"
edition = "2018"
resolver = "2"

[features]

[dependencies]
image = "0.24"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = { version="0.12" }
#wgpu = { git="https://github.com/gfx-rs/wgpu" }
pollster = "0.2"
anyhow = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }
bevy = { version = "0.6.0", features = ["dynamic"] }